FitLifeProLatest/force-app/main/default/objects/Subscription__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( ISPICKVAL( Membership_Plan__c , &#39;Silver&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Monthly&#39;) , 1000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Gold&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Monthly&#39;) , 2000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Platinum&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Monthly&#39;) , 3000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Silver&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Quarterly&#39;) , 3000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Gold&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Quarterly&#39;) , 4000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Platinum&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Quarterly&#39;) , 6000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Silver&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Annually&#39;) , 7000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Gold&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Annually&#39;) , 9000,
IF( ISPICKVAL( Membership_Plan__c , &#39;Platinum&#39;)&amp;&amp;ISPICKVAL( Subscription_Type__c , &#39;Annually&#39;) , 12000,
0
)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>