FitLifeProLatest/force-app/main/default/objects/Subscription__c/fields/Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_Date__c</fullName>
    <label>Membership Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>