FitLifeProLatest/force-app/main/default/objects/Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Membership_Plan__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>Membership_Start_Date__c</columns>
    <columns>Membership_End_Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>